--- a/_layouts/form.html
+++ b/_layouts/form.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
   {%- include head.html -%}
-
+  <link rel="stylesheet" type="text/css" href="../assets/css/form.css">
 <body>
   <section id="services" class="services">
     <div class="container">
