--- a/assets/css/guide.css
+++ b/assets/css/guide.css
@@ -95,8 +95,8 @@ code {
   word-wrap: normal;
   line-height: 2;
   background-color: #67b0d1;
-  padding: 15px;
-  margin: 10px;
+  padding: 7px;
+  margin: 5px;
   border-radius: 5px;
 }
 
@@ -147,4 +147,23 @@ code {
   border: 1px solid #ccc;
   border-radius: 5px;
   padding: 5px;
+}
+
+.sectionbutton {
+  text-decoration: none;
+  border-radius: 10px;
+  background-color: #67b0d1;
+  border: 2px solid #67b0d1;
+  color: #ffffff;
+  font-weight: bold;
+  padding:10px;
+  margin: 20px;
+  text-align: center;
+  transition: 0.3s;
+}
+
+.sectionbutton:hover {
+  background-color: transparent;
+  border: 2px solid #67b0d1;
+  color: #67b0d1;
 }
