--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,3 +34,5 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
 </head>
+
+<!-- Developer: Prakshal Jain || Contact: prakshal@buffalo.edu -->
