--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,3 +12,5 @@
 <script src="https://cs4sg.github.io/assets/js/main.js"></script>
 </body>
 </html>
+
+<!-- Developer: Prakshal Jain || Contact: prakshal@buffalo.edu -->
