--- a/_layouts/form.html
+++ b/_layouts/form.html
@@ -28,6 +28,7 @@
 
   <!-- Template Main JS File -->
   <script src="{{ "assets/js/main.js" | relative_url }}"></script>
+  <script src = "../assets/js/form.js"></script>
 
 </body>
 
