--- a/_layouts/form.html
+++ b/_layouts/form.html
@@ -3,7 +3,7 @@
 
   {%- include head.html -%}
   <link rel="stylesheet" type="text/css" href="../assets/css/form.css">
-  <script src = "../assets/js/form.js"></script>
+  <script src = "../assets/js/reloader.js"></script>
 <body>
   <section id="services" class="services">
     <div class="container">
@@ -29,6 +29,7 @@
 
   <!-- Template Main JS File -->
   <script src="{{ "assets/js/main.js" | relative_url }}"></script>
+  <script src = "../assets/js/form.js"></script>
 
 </body>
 
